syntax = "proto3";
package apiv1;

option go_package = "apiv1";
option java_package = "com.eldrix.concierge.api";
option java_outer_classname = "Protos";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message Patient {
    string lastname = 1;
    string firstnames = 2;
    string title = 3;
    Gender gender = 4;
    google.protobuf.Timestamp birth_date = 5;
    oneof deceased {
        google.protobuf.Timestamp deceased_date = 6;
        bool deceased_boolean = 7;
    }
    string surgery = 8;         // TODO: fix to reference from ODS
    string general_practitioner = 9; // TODO: fix to reference from ODS
    repeated Identifier identifiers = 10;
    repeated Address addresses = 11;
    repeated Telephone telephones = 12;
    repeated string emails = 13;

    enum Gender {
        UNKNOWN = 0;
        MALE = 1;
        FEMALE = 2;
    }
}

message Period {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

message Identifier {
    string system = 1;
    string value = 2;
}

message Address {
    string address1 = 1;
    string address2 = 2;
    string address3 = 3;
    string postcode = 4;
    string country = 5;
    Period period = 6;
}

message Telephone {
    string number = 1;
    string description = 2;
}





//
// Internal (module) proprietary requests
//

message RawCymruEmpiRequest {
    string authority = 1;
    string identifier = 2;
}


message CymruEmpiRequest {
    Authority authority = 1;  
    string identifier = 2;

    enum Authority {
        UNKNOWN = 0;
        NHS_NUMBER = 1;
        SWANSEA = 3;
        ANEURIN_BEVAN = 4;
        BCU_CENTRAL = 5;
        BCU_MAELOR = 6;
        BCU_WEST = 7;
        CWM_TAF = 8;
        CARDIFF_AND_VALE = 9;
        HYWEL_DDA = 10;   
        POWYS = 11;
    }
}
